<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/Instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Instruction"
        android:textColor="@color/splashred"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Instruction">

        <TextView
            android:textColor="@color/splashAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howtouse"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </ScrollView>


    <CheckBox
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:id="@+id/cheak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/splashred"
        android:text="@string/Do_not"
        android:textColorHint="@color/splashred"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <Button

        android:onClick="next"
        android:id="@+id/button"
        android:layout_width="133dp"
        android:layout_height="22dp"
        android:layout_marginBottom="18dp"
        android:background="@color/splashred"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>